feat(upload): sequential file add on outline to bypass body-size limits; robust response parsing on home/outline; docs: example MAX_UPLOAD_MB

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,17 @@ GITHUB_API_KEY="your_github_api_key_here"             # Optional: For GitHub imp
 # Supabase Configuration (Required for course publishing and storage)
 NEXT_PUBLIC_SUPABASE_URL="your_supabase_project_url_here"           # Required: Your Supabase project URL. Format: https://xxx.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY="your_supabase_anon_key_here"        # Required: Your Supabase anonymous/public API key
+
+# --- Model selection (UI + server) ---
+# Default choice used when nothing stored in localStorage: chatgpt5 | sonnet4
+NEXT_PUBLIC_DEFAULT_AI_MODEL="chatgpt5"
+DEFAULT_MODEL_CHOICE="chatgpt5"
+
+# Mapping for model IDs per provider
+# "ChatGPT 5" (OpenAI)
+OPENAI_MODEL_CHAT_GPT_5="gpt-4o"
+# "Sonnet 4" (Anthropic)
+ANTHROPIC_MODEL_SONNET_4="claude-4-sonnet-20252909"
+
+# Optional: client-side per-request upload cap (MB)
+NEXT_PUBLIC_MAX_UPLOAD_MB="20"
