--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,16 @@
 # OpenAI API Configuration
 # Get your API key from https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
+
+# Optional defaults for model selection
+NEXT_PUBLIC_DEFAULT_AI_MODEL=chatgpt5
+DEFAULT_MODEL_CHOICE=chatgpt5
+OPENAI_MODEL_CHAT_GPT_5=gpt-4o
+ANTHROPIC_MODEL_SONNET_4=claude-4-sonnet-20252909
+
+# Optional: client-side per-request upload cap (MB)
+NEXT_PUBLIC_MAX_UPLOAD_MB=20
+
+# Optional: client-side per-request upload cap (MB) used to split uploads
+# If unset, defaults to ~4.5 MB to align with common Vercel body limits
+NEXT_PUBLIC_MAX_UPLOAD_MB=4.5
