chore(env): document OPENAI_MAX_OUTPUT_TOKENS and clean dupes in .env.local.example; default gpt‑5 mapping

--- a/.env.local.example
+++ b/.env.local.example
@@ -5,12 +5,13 @@ OPENAI_API_KEY=your_openai_api_key_here
 # Optional defaults for model selection
 NEXT_PUBLIC_DEFAULT_AI_MODEL=chatgpt5
 DEFAULT_MODEL_CHOICE=chatgpt5
-OPENAI_MODEL_CHAT_GPT_5=gpt-4o
-ANTHROPIC_MODEL_SONNET_4=claude-4-sonnet-20252909
+# Map UI choice "ChatGPT 5" to concrete model id
+OPENAI_MODEL_CHAT_GPT_5=gpt-5-latest
+ANTHROPIC_MODEL_SONNET_4=claude-3-5-sonnet-20241022
 
-# Optional: client-side per-request upload cap (MB)
-NEXT_PUBLIC_MAX_UPLOAD_MB=20
-
-# Optional: client-side per-request upload cap (MB) used to split uploads
-# If unset, defaults to ~4.5 MB to align with common Vercel body limits
+# Client: per-request upload cap (MB) to split uploads
 NEXT_PUBLIC_MAX_UPLOAD_MB=4.5
+
+# Server: cap for object generation output tokens
+# GPT‑5 обычно требует 6000–8000, 7000 — безопасно
+OPENAI_MAX_OUTPUT_TOKENS=7000
