ui(progress): remove ETA line; make spinner indeterminate with continuous flying dot; stop filling ring arc

--- a/.env.example
+++ b/.env.example
@@ -19,14 +19,16 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY="your_supabase_anon_key_here"        # Required: Y
 NEXT_PUBLIC_SITE_URL="https://your-domain.vercel.app"              # Optional: Your production site URL. Auto-detected from VERCEL_URL if not set
 
 # --- Model selection (UI + server) ---
-# Default choice used when nothing stored in localStorage: chatgpt5 | sonnet4
-NEXT_PUBLIC_DEFAULT_AI_MODEL="chatgpt5"
-DEFAULT_MODEL_CHOICE="chatgpt5"
+# Default choice used when nothing stored in localStorage: chatgpt4o | chatgpt5 | sonnet4
+NEXT_PUBLIC_DEFAULT_AI_MODEL="chatgpt4o"
+DEFAULT_MODEL_CHOICE="chatgpt4o"
 
 # Mapping for model IDs per provider
-# "ChatGPT 5" (OpenAI) - Using latest available model
-OPENAI_MODEL_CHAT_GPT_5="gpt-4o"
-# "Sonnet 4" (Anthropic) - Using Claude Sonnet 4
+# ChatGPT-4o (OpenAI) - Fast and reliable
+OPENAI_MODEL_GPT_4O="gpt-4o"
+# ChatGPT-5 (OpenAI) - Latest with reasoning capabilities
+OPENAI_MODEL_GPT_5="gpt-5"
+# Claude Sonnet 4 (Anthropic) - High quality responses
 ANTHROPIC_MODEL_SONNET_4="claude-sonnet-4-20250514"
 
 # Optional: client-side per-request upload cap (MB)
