default(model): set 4o as default (client + server); update .env.example with OPENAI_MODEL_GPT_4O/5 and defaults

--- a/.env.local.example
+++ b/.env.local.example
@@ -3,10 +3,13 @@
 OPENAI_API_KEY=your_openai_api_key_here
 
 # Optional defaults for model selection
-NEXT_PUBLIC_DEFAULT_AI_MODEL=chatgpt5
-DEFAULT_MODEL_CHOICE=chatgpt5
-# Map UI choice "ChatGPT 5" to concrete model id
-OPENAI_MODEL_CHAT_GPT_5=gpt-5-latest
+# UI default and server default choice
+NEXT_PUBLIC_DEFAULT_AI_MODEL=chatgpt4o
+DEFAULT_MODEL_CHOICE=chatgpt4o
+
+# Model id mappings
+OPENAI_MODEL_GPT_4O=gpt-4o
+OPENAI_MODEL_GPT_5=gpt-5-latest
 ANTHROPIC_MODEL_SONNET_4=claude-3-5-sonnet-20241022
 
 # Client: per-request upload cap (MB) to split uploads
