--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "jsdom": "^27.0.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
     "mammoth": "^1.11.0",
     "nanoid": "^5.1.6",
